# pipecat-crush-quest

./: README.md
docs/: contacts.vcf  download_contacts.html  index.html
game-board/: crushes_for_img.py  env.example  image-maker.py
game-board/js/: index.js
pc_bot/: Dockerfile  bot.py  env.example  pcc-deploy.toml  pyproject.toml  requirements.txt
pc_bot/crush_utils/: crush_util.py  crushes.py
