[project]
name = "crush-quest-bot"
version = "0.1.0"
description = "The game bots behind Pipecat Crush Quest"
requires-python = ">=3.10"

dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,google,local-smart-turn-v3,runner,silero,webrtc]==0.0.86",
    "python-dotenv>=1.1.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "pipecatcloud>=0.2.4",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.uv.sources]
pipecat-ai = { git = "https://github.com/pipecat-ai/pipecat.git", rev = "bfa27a405894c98acce5427327d049c7f9eb6c4b" }
