[project]
name = "crush-quest-bot"
version = "0.1.0"
description = "The game bots behind Pipecat Crush Quest"
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.115.6",
    "loguru>=0.7.0",
    "pipecat-ai[daily,google,local-smart-turn-v3,runner,silero,webrtc]==0.0.90",
    "pipecatcloud>=0.2.4",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
